fix: hover on status bar may cause the covered li active

--- a/feat-popup/index.css
+++ b/feat-popup/index.css
@@ -10,7 +10,7 @@ body {
 
 #reading-list {
     list-style: none;
-    padding-top: 10px;
+    padding-top: 11px;
     padding-bottom: 24px;
 }
 
